--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,9 +23,9 @@ on:
         description: Platforms to build
         default: multiplatform
         options:
-          - multiplatform
-          - amd64
-          - arm64
+          - linux/amd64,linux/arm64
+          - linux/amd64
+          - linux/arm64
   pull_request:
     branches:
       - main
@@ -40,29 +40,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Determine platforms to build
-        id: determine_platforms
-        run: |
-          case "${{ inputs.platforms }}" in
-            amd64)
-              echo "Building for amd64"
-              PLATFORMS="linux/amd64"
-              ;;
-            arm64)
-              echo "Building for arm64"
-              PLATFORMS="linux/arm64"
-              ;;
-            multiplatform | "")
-              echo "Building for multiplatform"
-              PLATFORMS="linux/amd64,linux/arm64"
-              ;;
-            *)
-              echo "Invalid platform"
-              exit 1
-              ;;
-          esac
-          echo "platforms=${PLATFORMS}" >> $GITHUB_OUTPUT
 
       - name: Login to Docker
         uses: docker/login-action@v3
@@ -91,7 +68,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: ${{ steps.determine_platforms.outputs.platforms }}
+          platforms: ${{ inputs.platforms || 'linux/amd64,linux/arm64' }}
           push: true
           tags: ${{ vars.DOCKER_HUB_ACCOUNT }}/dbc-demo:latest
           cache-from: type=gha
@@ -102,6 +79,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: ${{ steps.determine_platforms.outputs.platforms }}
+          platforms: ${{ inputs.platforms || 'linux/amd64,linux/arm64' }}
           push: true
           tags: ${{ vars.DOCKER_HUB_ACCOUNT }}/dbc-demo:latest
