--- a/.github/workflows/compare.yaml
+++ b/.github/workflows/compare.yaml
@@ -8,12 +8,12 @@ jobs:
     secrets: inherit
     with:
       builder_type: local
-      platforms: multiplatform
+      platforms: linux/amd64,linux/arm64
 
   build_cloud:
     uses: ./.github/workflows/ci.yaml
     secrets: inherit
     with:
       builder_type: cloud
-      platforms: multiplatform
+      platforms: linux/amd64,linux/arm64
             
