--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,31 +1,6 @@
-name: Build and Push
+name: CI
 
 on:
-  workflow_call:
-    inputs:
-      builder_type:
-        required: true
-        type: string
-      platforms:
-        required: true
-        type: string
-  workflow_dispatch:
-    inputs:
-      builder_type:
-        type: choice
-        description: Builder type
-        default: cloud
-        options:
-          - local
-          - cloud
-      platforms:
-        type: choice
-        description: Platforms to build
-        default: multiplatform
-        options:
-          - linux/amd64,linux/arm64
-          - linux/amd64
-          - linux/arm64
   pull_request:
     branches:
       - main
@@ -35,50 +10,19 @@ on:
 
 jobs:
   build:
+    strategy:      
+      matrix:
+        builder_type: [local, cloud]
     runs-on: ubuntu-latest
-    environment: ${{ inputs.builder_type }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Login to Docker
-        uses: docker/login-action@v3
+      - name: Build and push
+        uses: ./.github/actions/buildpush
         with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Set up QEMU
-        if: ${{ inputs.builder_type == 'local' }}
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx (local)
-        if: ${{ inputs.builder_type == 'local' }}
-        uses: docker/setup-buildx-action@v3
-
-      - name: Set up Docker Buildx (cloud)
-        if: ${{ inputs.builder_type != 'local' }}
-        uses: docker/setup-buildx-action@v3
-        with:
-            version: lab:latest
-            driver: cloud
-            endpoint: docker/collab-bu
-
-      - name: Build and push (local)
-        if: ${{ inputs.builder_type == 'local' }}
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: ${{ inputs.platforms || 'linux/amd64,linux/arm64' }}
-          push: true
-          tags: ${{ vars.DOCKER_HUB_ACCOUNT }}/dbc-demo:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Build and push (cloud)
-        if: ${{ inputs.builder_type != 'local' }}
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: ${{ inputs.platforms || 'linux/amd64,linux/arm64' }}
-          push: true
-          tags: ${{ vars.DOCKER_HUB_ACCOUNT }}/dbc-demo:latest
+          builder_type: ${{ matrix.builder_type }}
+          platforms: linux/amd64,linux/arm64
+          docker_username: ${{ vars.DOCKER_USERNAME }}
+          docker_password: ${{ secrets.DOCKER_PASSWORD }}
+          docker_hub_account: ${{ vars.DOCKER_HUB_ACCOUNT }}
