refactor: use a variable for cloud builder

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,3 +26,4 @@ jobs:
           docker_username: ${{ vars.DOCKER_USERNAME }}
           docker_password: ${{ secrets.DOCKER_PASSWORD }}
           docker_hub_account: ${{ vars.DOCKER_HUB_ACCOUNT }}
+          cloud_builder: ${{ vars.CLOUD_BUILDER }}
