--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,4 +46,5 @@ jobs:
           docker_username: ${{ vars.DOCKER_USERNAME }}
           docker_password: ${{ secrets.DOCKER_PASSWORD }}
           docker_hub_account: ${{ vars.DOCKER_HUB_ACCOUNT }}
+          cloud_builder: ${{ vars.CLOUD_BUILDER }}
           no-cache: ${{ inputs.no-cache }}
